--- a/index.html
+++ b/index.html
@@ -883,7 +883,12 @@
           </li>
 
           <li>
-            <a href="tel:+201210935709" class="footer-link">Whats App</a>
+            <a href="tel:+201210935709" class="footer-link">Call US</a>
+          </li>
+          <li>
+            <a href="https://wa.me/201210935709" class="footer-link"
+              >WhatsApp</a
+            >
           </li>
         </ul>
 
