--- a/index.html
+++ b/index.html
@@ -112,13 +112,22 @@
           </ul>
 
           <div class="wrapper">
-            <a href="mailto:info@email.com" class="contact-link"
-              >info@email.com</a
-            >
+            <li>
+              <a href="mailto:abdalluh.samir.77@gmail.com" class="footer-link"
+                >E-Mail</a
+              >
+            </li>
 
-            <a href="tel:001234567890" class="contact-link"
-              >00 (123) 456 78 90</a
-            >
+            <li>
+              <a href="tel:+201556278173" class="footer-link">
+                (15) 562 78 173</a
+              >
+            </li>
+            <li>
+              <a href="https://wa.me/201210935709" class="footer-link"
+                >WhatsApp</a
+              >
+            </li>
           </div>
 
           <ul class="social-list">
@@ -883,7 +892,7 @@
           </li>
 
           <li>
-            <a href="tel:+201210935709" class="footer-link">Call US</a>
+            <a href="tel:+201210935709" class="footer-link"> (15) 562 78 173</a>
           </li>
           <li>
             <a href="https://wa.me/201210935709" class="footer-link"
