--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               >
             </li>
             <li>
-              <a href="https://wa.me/201210935709" class="footer-link"
+              <a href="https://wa.me/201556278173" class="footer-link"
                 >WhatsApp</a
               >
             </li>
@@ -132,13 +132,19 @@
 
           <ul class="social-list">
             <li>
-              <a href="#" class="social-link">
+              <a
+                href="https://x.com/abd_alluh_0?t=Gne-Xr7LTirP89cjJzkcBA&s=08"
+                class="social-link"
+              >
                 <ion-icon name="logo-twitter"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a
+                href="https://www.facebook.com/share/kBZoKPVpaWqdEz3v/?mibextid=qi2Omg"
+                class="social-link"
+              >
                 <ion-icon name="logo-facebook"></ion-icon>
               </a>
             </li>
@@ -150,7 +156,10 @@
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a
+                href="https://www.instagram.com/abdalluh.samir?igsh=MWMyY21sM2M5ZjFuNg=="
+                class="social-link"
+              >
                 <ion-icon name="logo-instagram"></ion-icon>
               </a>
             </li>
@@ -198,7 +207,9 @@
               <div class="btn-wrapper">
                 <a href="#" class="btn btn-primary">Explore Now</a>
 
-                <a href="#" class="btn btn-outline">Contact Us</a>
+                <a href="tel:+201556278173" class="btn btn-outline"
+                  >Contact Us</a
+                >
               </div>
             </div>
 
@@ -843,13 +854,19 @@
 
           <ul class="social-list">
             <li>
-              <a href="#" class="social-link">
+              <a
+                href="https://www.facebook.com/share/kBZoKPVpaWqdEz3v/?mibextid=qi2Omg"
+                class="social-link"
+              >
                 <ion-icon name="logo-facebook"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a
+                href="https://x.com/abd_alluh_0?t=Gne-Xr7LTirP89cjJzkcBA&s=08"
+                class="social-link"
+              >
                 <ion-icon name="logo-twitter"></ion-icon>
               </a>
             </li>
@@ -861,7 +878,10 @@
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a
+                href="https://www.instagram.com/abdalluh.samir?igsh=MWMyY21sM2M5ZjFuNg=="
+                class="social-link"
+              >
                 <ion-icon name="logo-instagram"></ion-icon>
               </a>
             </li>
@@ -892,10 +912,10 @@
           </li>
 
           <li>
-            <a href="tel:+201210935709" class="footer-link"> (15) 562 78 173</a>
+            <a href="tel:+201556278173" class="footer-link"> (15) 562 78 173</a>
           </li>
           <li>
-            <a href="https://wa.me/201210935709" class="footer-link"
+            <a href="https://wa.me/201556278173" class="footer-link"
               >WhatsApp</a
             >
           </li>
