--- a/index.html
+++ b/index.html
@@ -48,139 +48,140 @@
     <!-- 
     - #HEADER
   -->
+    <section id="Home">
+      <header class="header" data-header>
+        <div class="container">
+          <a href="#" class="logo">
+            <img
+              src="./assets/images/logo-light.svg"
+              width="74"
+              height="24"
+              alt="Adex home"
+              class="logo-light"
+            />
 
-    <header class="header" data-header>
-      <div class="container">
-        <a href="#" class="logo">
-          <img
-            src="./assets/images/logo-light.svg"
-            width="74"
-            height="24"
-            alt="Adex home"
-            class="logo-light"
-          />
+            <img
+              src="./assets/images/logo-dark.svg"
+              width="74"
+              height="24"
+              alt="Adex home"
+              class="logo-dark"
+            />
+          </a>
 
-          <img
-            src="./assets/images/logo-dark.svg"
-            width="74"
-            height="24"
-            alt="Adex home"
-            class="logo-dark"
-          />
-        </a>
-
-        <nav class="navbar" data-navbar>
-          <div class="navbar-top">
-            <a href="#" class="logo">
-              <img
-                src="./assets/images/logo-light.svg"
-                width="74"
-                height="24"
-                alt="Adex home"
-              />
-            </a>
-
-            <button
-              class="nav-close-btn"
-              aria-label="close menu"
-              data-nav-toggler
-            >
-              <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
-            </button>
-          </div>
-
-          <ul class="navbar-list">
-            <li>
-              <a href="#" class="navbar-link">Home</a>
-            </li>
-
-            <li>
-              <a href="#" class="navbar-link">About</a>
-            </li>
-
-            <li>
-              <a href="#" class="navbar-link">Projects</a>
-            </li>
-
-            <li>
-              <a href="#" class="navbar-link">Blog</a>
-            </li>
-
-            <li>
-              <a href="#" class="navbar-link">Contact</a>
-            </li>
-          </ul>
-
-          <div class="wrapper">
-            <li>
-              <a href="mailto:abdalluh.samir.77@gmail.com" class="footer-link"
-                >E-Mail</a
-              >
-            </li>
-
-            <li>
-              <a href="tel:+201556278173" class="footer-link">
-                (15) 562 78 173</a
-              >
-            </li>
-            <li>
-              <a href="https://wa.me/201556278173" class="footer-link"
-                >WhatsApp</a
-              >
-            </li>
-          </div>
-
-          <ul class="social-list">
-            <li>
-              <a
-                href="https://x.com/abd_alluh_0?t=Gne-Xr7LTirP89cjJzkcBA&s=08"
-                class="social-link"
-              >
-                <ion-icon name="logo-twitter"></ion-icon>
+          <nav class="navbar" data-navbar>
+            <div class="navbar-top">
+              <a href="#" class="logo">
+                <img
+                  src="./assets/images/logo-light.svg"
+                  width="74"
+                  height="24"
+                  alt="Adex home"
+                />
               </a>
-            </li>
 
-            <li>
-              <a
-                href="https://www.facebook.com/share/kBZoKPVpaWqdEz3v/?mibextid=qi2Omg"
-                class="social-link"
+              <button
+                class="nav-close-btn"
+                aria-label="close menu"
+                data-nav-toggler
               >
-                <ion-icon name="logo-facebook"></ion-icon>
-              </a>
-            </li>
+                <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
+              </button>
+            </div>
 
-            <li>
-              <a href="#" class="social-link">
-                <ion-icon name="logo-dribbble"></ion-icon>
-              </a>
-            </li>
+            <ul class="navbar-list">
+              <li>
+                <a href="#Home" class="navbar-link">Home</a>
+              </li>
 
-            <li>
-              <a
-                href="https://www.instagram.com/abdalluh.samir?igsh=MWMyY21sM2M5ZjFuNg=="
-                class="social-link"
-              >
-                <ion-icon name="logo-instagram"></ion-icon>
-              </a>
-            </li>
+              <li>
+                <a href="#About" class="navbar-link">About</a>
+              </li>
 
-            <li>
-              <a href="#" class="social-link">
-                <ion-icon name="logo-youtube"></ion-icon>
-              </a>
-            </li>
-          </ul>
-        </nav>
+              <li>
+                <a href="#Projects" class="navbar-link">Projects</a>
+              </li>
 
-        <a href="#" class="btn btn-primary">Free Trial</a>
+              <li>
+                <a href="#Blog" class="navbar-link">Blog</a>
+              </li>
 
-        <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
-          <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
-        </button>
+              <li>
+                <a href="#Contact" class="navbar-link">Contact</a>
+              </li>
+            </ul>
 
-        <div class="overlay" data-nav-toggler data-overlay></div>
-      </div>
-    </header>
+            <div class="wrapper">
+              <li>
+                <a href="mailto:abdalluh.samir.77@gmail.com" class="footer-link"
+                  >E-Mail</a
+                >
+              </li>
+
+              <li>
+                <a href="tel:+201556278173" class="footer-link">
+                  (15) 562 78 173</a
+                >
+              </li>
+              <li>
+                <a href="https://wa.me/201556278173" class="footer-link"
+                  >WhatsApp</a
+                >
+              </li>
+            </div>
+
+            <ul class="social-list">
+              <li>
+                <a
+                  href="https://x.com/abd_alluh_0?t=Gne-Xr7LTirP89cjJzkcBA&s=08"
+                  class="social-link"
+                >
+                  <ion-icon name="logo-twitter"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href="https://www.facebook.com/share/kBZoKPVpaWqdEz3v/?mibextid=qi2Omg"
+                  class="social-link"
+                >
+                  <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-dribbble"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a
+                  href="https://www.instagram.com/abdalluh.samir?igsh=MWMyY21sM2M5ZjFuNg=="
+                  class="social-link"
+                >
+                  <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-youtube"></ion-icon>
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <a href="#" class="btn btn-primary">Free Trial</a>
+
+          <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
+            <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
+          </button>
+
+          <div class="overlay" data-nav-toggler data-overlay></div>
+        </div>
+      </header>
+    </section>
 
     <main>
       <article>
@@ -413,7 +414,7 @@
         - #ABOUT
       -->
 
-        <section class="about" aria-labelledby="about-label">
+        <section id="About" class="about" aria-labelledby="about-label">
           <div class="container">
             <figure class="about-banner">
               <img
@@ -640,7 +641,11 @@
         - #PROJECT
       -->
 
-        <section class="section project" aria-labelledby="project-label">
+        <section
+          id="Projects"
+          class="section project"
+          aria-labelledby="project-label"
+        >
           <div class="container">
             <p class="section-subtitle" id="project-label">Case Studies</p>
 
@@ -819,7 +824,7 @@
         - #CTA
       -->
 
-        <section class="cta" aria-label="call to action">
+        <section id="Contact" class="cta" aria-label="call to action">
           <div class="container">
             <h2 class="h2 section-title">
               Join our community by using our services and grow your business.
