--- a/index.html
+++ b/index.html
@@ -293,7 +293,11 @@
         - #SERVICE
       -->
 
-        <section class="section service" aria-labelledby="service-label">
+        <section
+          id="Blog"
+          class="section service"
+          aria-labelledby="service-label"
+        >
           <div class="container">
             <p class="section-subtitle" id="service-label">What We Do?</p>
 
