--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                       <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
                     </div>
 
-                    <span class="span">Streamlined Spending Management. </span>
+                    <span class="span"> Streamlined Spending Management. </span>
                   </div>
                 </li>
 
@@ -563,7 +563,9 @@
                       <ion-icon name="checkmark" aria-hidden="true"></ion-icon>
                     </div>
 
-                    <span class="span"> Streamlined Spending Management. </span>
+                    <span class="span">
+                      Personalized Budgeting Solutions.
+                    </span>
                   </div>
                 </li>
 
